--- a/categories/diary/20200106.md
+++ b/categories/diary/20200106.md
@@ -2,8 +2,9 @@
 
 ### 1. 자바관련
 #### 1) 디자인패턴, 리플렉션 등 복습
-#### 2) 스프링 복습
+#### 2) 스프링부트 학습 및 스프링 복습
 #### 3) 토이프로젝트 진행
+#### 4) 출퇴근할때 기술서적 및 자료 학습
 
 ### 2. 알고리즘
 #### 1) 이론정리
